[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfinch"
version = "0.0.2"
description = "A python package for analyzing neural & bioacoustics signals from songbirds"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Jaerong Ahn", email = "jaerongahn@gmail.com" }]
keywords = ["python", "songbird", "zebra finch", "neuroscience", "bioacoustics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
]

dependencies = [
  "ffmpeg-python",
  "h5py",
  "librosa",
  "matplotlib",
  "moviepy",
  "numpy",
  "pandas",
  "pydub",
  "pydub",
  "pyyaml",
  "scikit-image",
  "scikit-learn",
  "scipy",
  "seaborn",
  "tqdm",
]

[project.urls]
repository = "https://github.com/JaerongA/pyfinch.git"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
exclude = '''
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

[tool.isort]
profile = "black"
